infra/k8s/history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history
  namespace: cloudservice-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - name: history
          image: luukmn/cloudservice-history:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: history-data
              mountPath: /data
          ports:
            - containerPort: 9000
      volumes:
        - name: history-data
          persistentVolumeClaim:
            claimName: history-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: history
  namespace: cloudservice-demo
spec:
  selector:
    app: history
  ports:
    - port: 9000
      targetPort: 9000
      name: http
