infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudservice-ingress
  namespace: cloudservice-demo
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/websocket: "true"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8000
          - path: /history
            pathType: Prefix
            backend:
              service:
                name: history
                port:
                  number: 9000
  tls:
    - hosts:
        - 13.61.38.85
      secretName: cloudservice-tls
